# web-stack

./: .gitignore  conanfile.txt  docker-compose.yml  scheme.txt
C++/: CMakeLists.txt  Dockerfile  package.json
C++/nginx/: Dockerfile
C++/src/: main.cpp
nginx/: default.conf
webAssembly/src/calculator/: README.md  calculator.js  index.html
webAssembly/src/factorial/: README.md  factorial.c  factorial.wasm  factorial.wat  index.html
